trying to fix viewport height on mobile 2

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@
 
 body {
 	background-color: black;
-	height: calc(100vh - calc(100vh - 100%));
 }
 
 body.fadeout {
@@ -157,6 +156,7 @@ nav .container-fluid {
 
 main .container-fluid.main {
 	height: calc(100vh - 10em);
+	height: calc((var(--vh, 1vh) * 100) - 10em);
 	width: calc(100vw - 2em);
 	margin: 1em;
 	overflow: scroll;
@@ -164,6 +164,7 @@ main .container-fluid.main {
 
 main .container-fluid.main .row.main {
 	height: calc(100vh - 10em);
+	height: calc((var(--vh, 1vh) * 100) - 10em);
 	width: calc(100vw - 2em);
 }
 
@@ -181,6 +182,7 @@ main .container-fluid.main .row.main {
 
 .tag-menu {
 	height: calc(100vh - 10em);
+	height: calc((var(--vh, 1vh) * 100) - 10em);
 	padding: 0;
 	display: flex;
 	align-items: flex-end;
@@ -545,6 +547,7 @@ footer .col-12 hr {
 .container-fluid .piece-view {
 	margin-bottom: -1em;
 	height: calc(100vh - 11.5em);
+	height: calc((var(--vh, 1vh) * 100) - 11.5em);
 }
 
 .statement {
